log/build_2024-06-05_02-12-25/task/stdout_stderr.log
-- Found ament_cmake: 0.9.12 (/opt/ros/foxy/share/ament_cmake/cmake)
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Found rclcpp: 2.4.3 (/opt/ros/foxy/share/rclcpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 1.3.1 (/opt/ros/foxy/share/rosidl_adapter/cmake)
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 1.0.4 (/opt/ros/foxy/share/rmw_implementation_cmake/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found ament_lint_auto: 0.9.8 (/opt/ros/foxy/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: $<BUILD_INTERFACE:/home/sakshi/ClutterBot/src/task/include>
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/sakshi/ClutterBot/build/task
[35m[1mScanning dependencies of target noisyodom[0m
[ 50%] [32mBuilding CXX object CMakeFiles/noisyodom.dir/src/noisyodom.cpp.o[0m
/home/sakshi/ClutterBot/src/task/src/noisyodom.cpp: In member function ‘void NoiseNode::odomCallback(nav_msgs::msg::Odometry_<std::allocator<void> >::SharedPtr)’:
/home/sakshi/ClutterBot/src/task/src/noisyodom.cpp:46:34: error: ‘toMsg’ is not a member of ‘tf2’
   46 |     tf.transform.rotation = tf2::toMsg(q);
      |                                  ^~~~~
/home/sakshi/ClutterBot/src/task/src/noisyodom.cpp: In member function ‘double NoiseNode::getNoise()’:
/home/sakshi/ClutterBot/src/task/src/noisyodom.cpp:53:17: error: ‘random_device’ in namespace ‘std’ does not name a type
   53 |     static std::random_device rd;
      |                 ^~~~~~~~~~~~~
/home/sakshi/ClutterBot/src/task/src/noisyodom.cpp:54:17: error: ‘mt19937’ in namespace ‘std’ does not name a type
   54 |     static std::mt19937 gen(rd());
      |                 ^~~~~~~
/home/sakshi/ClutterBot/src/task/src/noisyodom.cpp:55:17: error: ‘normal_distribution’ in namespace ‘std’ does not name a template type; did you mean ‘uniform_int_distribution’?
   55 |     static std::normal_distribution<> d(0.0, 0.1); // Mean 0, standard deviation 0.1
      |                 ^~~~~~~~~~~~~~~~~~~
      |                 uniform_int_distribution
/home/sakshi/ClutterBot/src/task/src/noisyodom.cpp:56:14: error: ‘gen’ was not declared in this scope
   56 |     return d(gen);
      |              ^~~
/home/sakshi/ClutterBot/src/task/src/noisyodom.cpp:56:12: error: ‘d’ was not declared in this scope
   56 |     return d(gen);
      |            ^
make[2]: *** [CMakeFiles/noisyodom.dir/build.make:63: CMakeFiles/noisyodom.dir/src/noisyodom.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/noisyodom.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
